# yadopt

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
docs/: _config.yaml  apiref.md  index.html  index.md  misc.md  spec_dc.md  spec_hm.md
docs/_includes/: head_custom.html
docs/_sass/custom/: custom.scss  setup.scss
docs/css/: pure-min.css  style.css
docs/images/: software_architecture.drawio
docs/js/: highlight.min.js  jquery.min.js
examples/: 00_usage_in_readme.py  01_type_hint.py  02_decorator.py  03_dataclass.py  03_subcommand.py  04_save_and_load.py  04_saved_arguments.json  04_saved_arguments.txt  05_pydantic.py  README.md
tests/: run_test_dataclass.py  run_test_toml.py  run_test_wrap.py  run_tests.py  run_tests_on_docker.bash  testcase01.py  testcase02.py  testcase03.py  testcase04.py  testcase05.py  testcase06.py  testcase07.py  testcase08.py  testcase09.py  testcase10.py  testcase11.py  testcase12.py  testcase13.py  testcase_wrap.py  testcases.toml  unit_test.py
tests/files/: args_20260105.toml  broken_json_file1.json  broken_toml_file1.toml  broken_toml_file2.toml  broken_toml_file3.toml
yadopt/: __init__.py  analysis.py  argopt.py  argvec.py  basearg.py  checker.py  color.py  datacls.py  datamodel.py  declaration.py  default.py  description.py  docstr.py  dtypes.py  errors.py  gendat.py  helpmsg.py  hint.py  hints.py  matchers.py  optarg.py  persist.py  posarg.py  posopt.py  section.py  serialize.py  toml.py  typehint.py  usage.py  utils.py  yadopt.py
