[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"

[project]

# Package name.
name = "yadopt"

# List of attributes that will be captured dynamically.
dynamic = ["version"]

# Authors.
authors = [{name="Tetsuya Ishikawa", email="tiskw111@gmail.com"}]

# Package description.
description = "Yet another docopt, a human-friendly command line arguments parser."

# Readme file.
readme = "README.md"

# License file.
license = {file = "LICENSE"}

# Required Python version.
requires-python = ">=3.10"

# Dependencies of the other Python packages.
dependencies = [
    "tomli; python_version <= '3.10'",
]

# Classification tags.
classifiers = [
    # How mature is this project? Common values are.
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",

    # Indicate who your project is intended for.
    "Intended Audience :: Developers",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",

    # Pick your license as you wish.
    "License :: OSI Approved :: MIT License",

    # Operating system assumed to be used.
    "Operating System :: OS Independent",
]

[project.urls]

# GitHub repository URL.
Repository = "https://github.com/tiskw/yadopt"

# GitHub issue URL.
Issues = "https://github.com/tiskw/yadopt/issues"

[tool.hatch.version]

# Path to the file that contains `__version__` variable.
path = "yadopt/__init__.py"
